--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
         "iojs": "~1.2.0"
     },
     "dependencies": {
-        "ghost": "nybblr/ghost"
+        "ghost": "nybblr/ghost#switch-to-markdown-it"
     }
 }
